--- a/packages/css/src/styles/components/select.css
+++ b/packages/css/src/styles/components/select.css
@@ -55,6 +55,8 @@ select.select {
     --select-separator-margin: var(--spacing-2) 0;
     --select-separator-size: 1px;
 
+    /* NOTE: No problem as it falls back with `@supports` */
+    /* eslint-disable-next-line css/no-invalid-at-rules */
     appearance: base-select;
 
     &::picker-icon {
@@ -65,16 +67,12 @@ select.select {
       border: var(--select-picker-icon-border);
       border-top: 0;
       border-right: 0;
-      transform: rotate(var(--select-picker-icon-transform-rotate-closed))
-        translateX(calc(var(--select-picker-icon-transform-translate-x) * -1))
-        translateY(var(--select-picker-icon-transform-translate-y));
+      transform: rotate(var(--select-picker-icon-transform-rotate-closed)) translateX(calc(var(--select-picker-icon-transform-translate-x) * -1)) translateY(var(--select-picker-icon-transform-translate-y));
     }
 
     &:open {
       &::picker-icon {
-        transform: rotate(var(--select-picker-icon-transform-rotate-open))
-          translateX(var(--select-picker-icon-transform-translate-x))
-          translateY(calc(var(--select-picker-icon-transform-translate-y) * -1));
+        transform: rotate(var(--select-picker-icon-transform-rotate-open)) translateX(var(--select-picker-icon-transform-translate-x)) translateY(calc(var(--select-picker-icon-transform-translate-y) * -1));
       }
     }
 
@@ -95,10 +93,7 @@ select.select {
       &:hover {
         opacity: var(--select-hover-opacity);
         cursor: pointer;
-        background-color: hsl(
-          from var(--select-bg-color) h s
-            calc(l * var(--select-option-hover-darker-rate))
-        );
+        background-color: hsl(from var(--select-bg-color) h s calc(l * var(--select-option-hover-darker-rate)));
       }
 
       &:checked {
