--- a/packages/css/src/styles/components/tag.css
+++ b/packages/css/src/styles/components/tag.css
@@ -67,8 +67,7 @@
       &:not(:disabled) {
         &:hover,
         &:focus {
-          transition: filter var(--tag-transition-duration)
-            var(--tag-transition-timing);
+          transition: filter var(--tag-transition-duration) var(--tag-transition-timing);
         }
       }
     }
