--- a/packages/css/src/styles/components/checkbox.css
+++ b/packages/css/src/styles/components/checkbox.css
@@ -15,6 +15,8 @@ input[type="checkbox"].checkbox {
   border: 2px solid var(--checkbox-border-color);
   border-radius: var(--checkbox-border-radius);
   cursor: pointer;
+  /* NOTE: Non-critical property, so this is acceptable */
+  /* eslint-disable-next-line css/use-baseline */
   user-select: none;
 
   &::after {
