--- a/packages/css/src/styles/components/radio.css
+++ b/packages/css/src/styles/components/radio.css
@@ -14,6 +14,8 @@ input[type="radio"].radio {
   border: 2px solid var(--radio-border-color);
   border-radius: 50%;
   cursor: pointer;
+  /* NOTE: Non-critical property, so this is acceptable */
+  /* eslint-disable-next-line css/use-baseline */
   user-select: none;
 
   &::after {
