--- a/packages/css/src/styles/components/textarea.css
+++ b/packages/css/src/styles/components/textarea.css
@@ -43,6 +43,8 @@ textarea.textarea {
   }
 
   &.--auto-fit {
+    /* NOTE: This property has limited browser support - will be documented for users */
+    /* eslint-disable-next-line css/use-baseline */
     field-sizing: content;
   }
 }
