--- a/packages/css/src/styles/utils/visibility.css
+++ b/packages/css/src/styles/utils/visibility.css
@@ -1,3 +1,5 @@
+/* eslint-disable css/no-important */
+
 .hidden {
   display: none !important;
 }
@@ -18,6 +20,7 @@
   padding: 0;
   margin: -1px;
   overflow: hidden;
+  /* eslint-disable-next-line css/use-baseline */
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
