--- a/packages/css/src/styles/components/dialog.css
+++ b/packages/css/src/styles/components/dialog.css
@@ -41,7 +41,8 @@ dialog.dialog {
 
   &.--transition {
     &[open] {
-      transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+      transition: opacity var(--dialog-transition-duration) ease-in-out,
+        transform var(--dialog-transition-duration) ease-in-out;
       transform: translateY(0);
       opacity: 1;
 
