--- a/packages/css/src/styles/main.css
+++ b/packages/css/src/styles/main.css
@@ -20,5 +20,6 @@
 @import "./components/snackbar.css" layer(components);
 @import "./components/accordion.css" layer(components);
 @import "./components/tag.css" layer(components);
+@import "./components/alert.css" layer(components);
 
 @import "./utils/visibility.css" layer(utils);
