feat: rename tag to badge

--- a/packages/css/src/styles/main.css
+++ b/packages/css/src/styles/main.css
@@ -19,7 +19,7 @@
 @import "./components/tabs.css" layer(components);
 @import "./components/snackbar.css" layer(components);
 @import "./components/accordion.css" layer(components);
-@import "./components/tag.css" layer(components);
+@import "./components/badge.css" layer(components);
 @import "./components/alert.css" layer(components);
 
 @import "./utils/visibility.css" layer(utils);
