--- a/packages/css/src/styles/foundation/variables/base.css
+++ b/packages/css/src/styles/foundation/variables/base.css
@@ -1,4 +1,4 @@
-@import "./colors.css";
+@import "./color/semantic.css";
 @import "./spacing.css";
 @import "./border.css";
 @import "./shadow.css";
