--- a/packages/css/src/styles/components/select.css
+++ b/packages/css/src/styles/components/select.css
@@ -49,7 +49,7 @@ select.select {
     --select-optgroup-bg-color: var(--color-text-gray);
     --select-option-padding: var(--spacing-2);
     --select-option-checked-bg-color: var(--color-tertiary);
-    --select-option-checked-text-color: var(--color-text-light);
+    --select-option-checked-text-color: var(--color-text);
     --select-option-hover-darker-rate: 0.9;
     --select-separator-color: var(--color-border);
     --select-separator-margin: var(--spacing-2) 0;
