--- a/packages/css/src/styles/components/button.css
+++ b/packages/css/src/styles/components/button.css
@@ -1,12 +1,16 @@
 .btn {
-  --btn-color-default: var(--color-bg-grey);
+  --btn-color-default: var(--color-default);
   --btn-color-primary: var(--color-primary);
   --btn-color-secondary: var(--color-secondary);
   --btn-color-tertiary: var(--color-tertiary);
   --btn-text-color-default: var(--color-text);
   --btn-text-color-primary: var(--color-text-light);
   --btn-text-color-secondary: var(--color-text-light);
-  --btn-text-color-tertiary: var(--color-text-light);
+  --btn-text-color-tertiary: var(--color-text);
+  --btn-outline-text-color-default: color(from var(--btn-color-default) srgb calc(r * 0.5) calc(g * 0.5) calc(b * 0.5));
+  --btn-outline-text-color-primary: color(from var(--btn-color-primary) srgb calc(r * 0.5) calc(g * 0.5) calc(b * 0.5));
+  --btn-outline-text-color-secondary: color(from var(--btn-color-secondary) srgb calc(r * 0.5) calc(g * 0.5) calc(b * 0.5));
+  --btn-outline-text-color-tertiary: color(from var(--btn-color-tertiary) srgb calc(r * 0.55) calc(g * 0.55) calc(b * 0.55));
   --btn-darker-brightness: 90%;
   --btn-lighter-brightness: 110%;
   --btn-disabled-opacity: 0.65;
@@ -75,7 +79,7 @@
     border: 2px solid transparent;
 
     &.--default {
-      color: var(--btn-color-default);
+      color: var(--btn-outline-text-color-default);
       border-color: var(--btn-color-default);
 
       &:hover {
@@ -85,7 +89,7 @@
     }
 
     &.--primary {
-      color: var(--btn-color-primary);
+      color: var(--btn-outline-text-color-primary);
       border-color: var(--btn-color-primary);
 
       &:hover {
@@ -95,7 +99,7 @@
     }
 
     &.--secondary {
-      color: var(--btn-color-secondary);
+      color: var(--btn-outline-text-color-secondary);
       border-color: var(--btn-color-secondary);
 
       &:hover {
@@ -105,7 +109,7 @@
     }
 
     &.--tertiary {
-      color: var(--btn-color-tertiary);
+      color: var(--btn-outline-text-color-tertiary);
       border-color: var(--btn-color-tertiary);
 
       &:hover {
