--- a/packages/css/src/styles/components/input.css
+++ b/packages/css/src/styles/components/input.css
@@ -2,7 +2,7 @@ input.input {
   --input-border-radius: var(--border-radius-sm);
   --input-border-color: var(--color-border);
   --input-border: 1px solid var(--input-border-color);
-  --input-bg-color: var(--color-bg-light);
+  --input-bg-color: initial;
   --input-placeholder-color: var(--color-text-muted);
   --input-hover-opacity: 0.8;
   --input-disabled-opacity: 0.65;
