--- a/packages/css/src/main.css
+++ b/packages/css/src/main.css
@@ -4,6 +4,7 @@
 @import "./foundation/base.css" layer(base);
 
 @import "./layouts/container.css" layer(layout);
+@import "./layouts/columns.css" layer(layout);
 
 @import "./components/button.css" layer(components);
 @import "./components/heading.css" layer(components);
