feat: add Navbar component with responsive design and customizable options

--- a/packages/css/src/foundation/variables/zindex.css
+++ b/packages/css/src/foundation/variables/zindex.css
@@ -4,6 +4,12 @@
   inherits: true;
 }
 
+@property --zindex-navbar {
+  syntax: "<integer>";
+  initial-value: 1000;
+  inherits: true;
+}
+
 @property --zindex-modal {
   syntax: "<integer>";
   initial-value: 1050;
