--- a/packages/css/src/components/navbar.css
+++ b/packages/css/src/components/navbar.css
@@ -6,9 +6,14 @@
   --navbar-item-text-color: var(--color-text);
   --navbar-item-hover-bg-color: var(--color-primary);
   --navbar-item-hover-text-color: var(--color-text-light);
+
   --navbar-hamburger-icon-content: "☰";
   --navbar-hamburger-icon-size: 1.5rem;
+  --navbar-hamburger-icon-padding: 0 var(--spacing-2);
   --navbar-hamburger-icon-color: var(--color-text);
+  --navbar-hamburger-icon-hover-bg-color: color(from var(--navbar-bg-color) srgb calc(r * 0.8) calc(g * 0.8) calc(b * 0.8));
+  --navbar-hamburger-icon-border-radius: var(--border-radius-sm);
+
   --navbar-hamburger-menu-bg-color: var(--color-bg-light);
   --navbar-hamburger-menu-border: 2px solid var(--color-bg-light);
   --navbar-hamburger-menu-border-radius: 0 0 var(--border-radius-sm) var(--border-radius-sm);
@@ -16,7 +21,8 @@
   --navbar-hamburger-menu-item-separate-border: 1px solid var(--color-bg-light);
   --navbar-hamburger-menu-zindex: var(--zindex-navbar);
 
-  width: 100%;
+  min-width: 100%;
+  width: max-content;
   background-color: var(--color-bg-light);
   min-height: var(--navbar-min-height);
   display: flex;
@@ -76,9 +82,16 @@
     display: none;
   }
 
-  .hamburger-menu {
+  .navbar__hamburger-menu {
+    display: inline-block;
     color: var(--navbar-hamburger-icon-color);
     text-decoration: none;
+    padding: var(--navbar-hamburger-icon-padding);
+    border-radius: var(--navbar-hamburger-icon-border-radius);
+
+    &:hover {
+      background-color: var(--navbar-hamburger-icon-hover-bg-color);
+    }
 
     &::before {
       content: var(--navbar-hamburger-icon-content);
@@ -114,12 +127,16 @@
       }
 
       .navbar__item {
+        &:last-child {
+          border-radius: var(--navbar-hamburger-menu-border-radius);
+        }
+
         &:not(:last-child) {
           border-bottom: var(--navbar-hamburger-menu-item-separate-border);
         }
       }
 
-      &:has(.hamburger-menu[aria-expanded="true"]) {
+      &:has(.navbar__hamburger-menu[aria-expanded="true"]) {
         .navbar__items {
           visibility: visible;
           opacity: 1;
@@ -128,6 +145,11 @@
 
       &.--hover-hamburger-menu {
         &:has(.navbar__hamburger:hover),
+        &:has(.navbar__hamburger:focus),
+        &:has(.navbar__hamburger:focus-visible),
+        &:has(.navbar__hamburger-menu:hover),
+        &:has(.navbar__hamburger-menu:focus),
+        &:has(.navbar__hamburger-menu:focus-visible),
         &:has(.navbar__items:hover),
         &:has(.navbar__item:focus),
         &:has(.navbar__item:focus-visible) {
