--- a/packages/css/src/layouts/columns.css
+++ b/packages/css/src/layouts/columns.css
@@ -34,8 +34,7 @@
     grid-template-areas: "main";
   }
 
-  /* TODO: custom-media queries */
-  @media screen and (width < 576px) {
+  @media (--media-breakpoint-max-sm) {
     /* NOTE: Nesting styles within `@media` queries don't seem to be supported, so disabled. */
     /* eslint-disable css/no-invalid-at-rules */
     grid-template-areas: "left" "main" "right";
